--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@ body {
     min-height: 100vh;
 }
 
+.boat-list-item {
+    list-style: none;
+}
+
 @media only screen and (min-width: 300px) {
     body {
         padding-bottom: 830px;
