--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,14 @@ body {
     list-style: none;
 }
 
+.hover-grow {
+    transition: 500ms;
+}
+
+.hover-grow:hover {
+    scale: 1.05;
+}
+
 @media only screen and (min-width: 300px) {
     body {
         padding-bottom: 830px;
