--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -22,6 +24,7 @@
         url('/fonts/apercu-bold-pro.woff') format('woff'),
         url('/fonts/apercu-bold-pro.ttf') format('truetype');
     font-weight: 700;
+    font-display: swap;
 }
 @font-face {
     font-family: 'apercu-medium-pro';
@@ -29,6 +32,7 @@
         url('/fonts/apercu-medium-pro.woff') format('woff'),
         url('/fonts/apercu-medium-pro.ttf') format('truetype');
     font-weight: 500;
+    font-display: swap;
 }
 @font-face {
     font-family: 'apercu-regular-pro';
@@ -36,6 +40,7 @@
         url('/fonts/apercu-regular-pro.woff') format('woff'),
         url('/fonts/apercu-regular-pro.ttf') format('truetype');
     font-weight: 400;
+    font-display: swap;
 }
 
 
@@ -44,16 +49,18 @@
     padding: 0;
     box-sizing: border-box;
     color: #073050;
-    font-family: 'apercu-regular-pro';
+    font-family: 'apercu-regular-pro', 'Inter', sans-serif;;
     font-display: swap;
 }
 
 .bold {
-    font-family: 'apercu-bold-pro';
+    font-family: 'apercu-bold-pro', 'Inter', sans-serif;;
+    font-display: swap;
 }
 
 .medium {
-    font-family: 'apercu-medium-pro';
+    font-family: 'apercu-medium-pro', 'Inter', sans-serif;;
+    font-display: swap;
 }
 
 body {
