--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@
         url('/fonts/apercu-bold-pro.woff') format('woff'),
         url('/fonts/apercu-bold-pro.ttf') format('truetype');
     font-weight: 700;
-    font-display: block;
+    font-display: swap;
     font-style: normal;
 }
 @font-face {
@@ -33,7 +33,7 @@
         url('/fonts/apercu-medium-pro.woff') format('woff'),
         url('/fonts/apercu-medium-pro.ttf') format('truetype');
     font-weight: 500;
-    font-display: block;
+    font-display: swap;
     font-style: normal;
 }
 @font-face {
@@ -42,7 +42,7 @@
         url('/fonts/apercu-regular-pro.woff') format('woff'),
         url('/fonts/apercu-regular-pro.ttf') format('truetype');
     font-weight: 400;
-    font-display: block;
+    font-display: swap;
     font-style: normal;
 }
 
@@ -52,18 +52,15 @@
     padding: 0;
     box-sizing: border-box;
     color: #073050;
-    font-family: 'apercu-regular-pro', 'Inter', sans-serif;;
-    font-display: block;
+    font-family: 'apercu-regular-pro', 'Inter', sans-serif;
 }
 
 .bold {
-    font-family: 'apercu-bold-pro', 'Inter', sans-serif;;
-    font-display: block;
+    font-family: 'apercu-bold-pro', 'Inter', sans-serif;
 }
 
 .medium {
-    font-family: 'apercu-medium-pro', 'Inter', sans-serif;;
-    font-display: block;
+    font-family: 'apercu-medium-pro', 'Inter', sans-serif;
 }
 
 body {
